[WED-3] Fix vertical align and wide screens panels

--- a/engines/spree_wedding_atelier/app/assets/stylesheets/wedding_atelier/registrations/_containers.scss
+++ b/engines/spree_wedding_atelier/app/assets/stylesheets/wedding_atelier/registrations/_containers.scss
@@ -17,11 +17,13 @@
 
   .left-side {
     @extend .col-xs-12;
-    @extend .col-sm-6;
+    @extend .col-sm-12;
+    @extend .col-md-6;
   }
 
   .right-side {
-    @extend .col-sm-6;
+    @extend .col-sm-12;
+    @extend .col-md-6;
   }
 
   .right-side,
@@ -33,12 +35,12 @@
     @extend .center-block;
   }
 
-  @media screen and (min-width: $screen-sm-min) {
+  @media screen and (min-width: $screen-sm-min) and (max-width: $screen-sm-max){
     margin: 0;
     padding: 0;
 
     .left-side, .right-side {
-      height: 100%;
+      height: 50%;
     }
 
     .left-side {
@@ -57,6 +59,53 @@
     .left-side-container {
       background-color: $white-two;
       height: 100%;
+      padding: 40px 80px;
+    }
+
+    .right-side-container {
+      display: table-cell;
+      vertical-align: middle;
+      padding: 10px;
+    }
+
+    .right-side-container h1 {
+      background-image: image-url('spree_wedding_atelier/logo.png');
+      background-repeat: no-repeat;
+      width: 487px;
+      height: 38px;
+      text-indent: -9999px;
+    }
+
+  }
+
+  @media screen and (min-width: $screen-md-min) {
+    margin: 0;
+    padding: 0;
+
+    .left-side, .right-side {
+      height: 100%;
+    }
+
+    .left-side {
+      background-color: $white-three;
+      background-image: image-url('spree_wedding_atelier/marbel.png');
+
+      padding: 50px 60px;
+    }
+
+    .right-side {
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-image: image-url('spree_wedding_atelier/bitmap.png');
+      display: table;
+    }
+
+    .left-side-container {
+      background-color: $white-two;
+      display: table;
+      height: 100%;
+      margin-left: auto;
+      margin-right: auto;
       padding: 40px 80px;
     }
 
